change riodefi to definex

--- a/shared/resources/localization/en.json
+++ b/shared/resources/localization/en.json
@@ -152,7 +152,7 @@
   "Deposit": "Deposit",
   "Withdraw": "Withdraw",
   "Transfer": "Transfer",
-  "Riodefi": "Riodefi",
+  "Definex": "Definex",
   "Network Delay": "Network Delay",
   "Sync Status": "Sync Status",
   "Connected Peers": "Connected Peers",
@@ -168,7 +168,7 @@
   "BTC Amount": "BTC Amount",
   "Available Credit Line": "Available Credit Line",
   "Loan ID": "Loan ID",
-  "* If your deposit amount is over 30 BTC, please contact support@riodefi.com, otherwise it won't be confirmed (will be in Pending until you cancel it)": "* If your deposit amount is over 30 BTC, please contact support@riodefi.com, otherwise it won't be confirmed (will be in Pending until you cancel it)",
+  "* If your deposit amount is over 30 BTC, please contact support@definex.com, otherwise it won't be confirmed (will be in Pending until you cancel it)": "* If your deposit amount is over 30 BTC, please contact support@definex.com, otherwise it won't be confirmed (will be in Pending until you cancel it)",
   "Block ID": "Block ID",
   "Hash": "Hash",
   "Module": "Module",
