--- a/shared/resources/localization/zh.json
+++ b/shared/resources/localization/zh.json
@@ -152,7 +152,7 @@
   "Deposit": "存入",
   "Withdraw": "提取",
   "Transfer": "转账",
-  "Riodefi": "RioDeFi",
+  "Definex": "Definex",
   "Network Delay": "网络延迟",
   "Sync Status": "同步状态",
   "Connected Peers": "已连接的节点",
@@ -168,7 +168,7 @@
   "BTC Amount": "BTC 数量",
   "Available Credit Line": "可用的信用额度",
   "Loan ID": "贷款编号",
-  "* If your deposit amount is over 30 BTC, please contact support@riodefi.com, otherwise it won't be confirmed (will be in Pending until you cancel it)": "如果您需要充值的数量大于30 BTC, 请联系 support@riodefi.com否则您的这笔充值将不会被确认 (状态将会停留在等待确认)",
+  "* If your deposit amount is over 30 BTC, please contact support@definex.com, otherwise it won't be confirmed (will be in Pending until you cancel it)": "如果您需要充值的数量大于30 BTC, 请联系 support@definex.com否则您的这笔充值将不会被确认 (状态将会停留在等待确认)",
   "Block ID": "区块号",
   "Hash": "哈希",
   "Module": "模块",
