--- a/shared/resources/localization/en.json
+++ b/shared/resources/localization/en.json
@@ -132,7 +132,7 @@
   "Completed": "Completed",
   "Error": "Error",
   "My Loan": "My Loan",
-  "My Stake": "My Stake",
+  "My Saving": "My Saving",
   "Action": "Action",
   "Edit": "Edit",
   "Contact": "Contact",
