--- a/shared/resources/localization/zh.json
+++ b/shared/resources/localization/zh.json
@@ -132,7 +132,7 @@
   "Completed": "已完成",
   "Error": "错误",
   "My Loan": "我的贷款",
-  "My Stake": "我的存款",
+  "My Saving": "我的存款",
   "Action": "操作",
   "Edit": "编辑",
   "Contact": "联系人",
