--- a/shared/resources/localization/en.json
+++ b/shared/resources/localization/en.json
@@ -189,5 +189,31 @@
   "* Send only {symbol} to this deposit address": "* Send only {symbol} to this deposit address",
   "Input your Mnemonics in correct order to below table, use space to seperate Mnemonics": "Input your Mnemonics in correct order to below table, use space to seperate Mnemonics",
   "Next": "Next",
-  "extension": "extension"
+  "extension": "extension",
+  "Market":"Market",
+  "lockId":"Lock Id",
+  "who":"Who",
+  "status":"Status",
+  "borrowAssetId":"Borrow Asset Id",
+  "borrowBalance":"Borrow Balance",
+  "collateralBalance":"Collateral Balance",
+  "terms":"Terms",
+  "interestRate":"Interest Rate",
+  "collateralAssetId":"Collateral Asset Id",
+  "deadAfter":"Dead After",
+  "loanId":"Loan Id",
+  "add":"Add",
+  "lend":"Lend",
+  "repay":"Repay",
+  "balance":"Balance",
+  "addCollateral":"Add Collateral",
+  "return":"Return",
+  "interest":"Interest",
+  "fee":"Fee",
+  "make":"Make",
+  "collateral_balance": "Collateral Balance",
+  "collateral": "Collateral",
+  "amount": "amount",
+  "interest_rate": "Interest Rate",
+  "cancel":"Cancel"
 }
