--- a/shared/resources/localization/zh.json
+++ b/shared/resources/localization/zh.json
@@ -189,5 +189,31 @@
   "* Send only {symbol} to this deposit address": "* 请发送{symbol}到此地址",
   "Input your Mnemonics in correct order to below table, use space to seperate Mnemonics": "请按照顺序输入您的助记词，并以空格来分格助记词",
   "Next": "下一步",
-  "extension": "插件"
+  "extension": "插件",
+  "Market":"市场",
+  "lockId":"Lock Id",
+  "who":"Who",
+  "status":"状态",
+  "borrowAssetId":"Borrow Asset Id",
+  "borrowBalance":"Borrow Balance",
+  "collateralBalance":"Collateral Balance",
+  "terms":"Terms",
+  "interestRate":"利率",
+  "collateralAssetId":"Collateral Asset Id",
+  "deadAfter":"Dead After",
+  "loanId":"Loan Id",
+  "add":"Add",
+  "lend":"Lend",
+  "repay":"Repay",
+  "balance":"Balance",
+  "addCollateral":"Add Collateral",
+  "return":"Return",
+  "interest":"Interest",
+  "fee":"Fee",
+  "make":"Make",
+  "collateral_balance": "Collateral Balance",
+  "collateral": "Collateral",
+  "amount": "amount",
+  "interest_rate": "Interest Rate",
+  "cancel":"Cancel"
 }
